Fix editor buttons alignment

--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -130,7 +130,7 @@
     &.description .editor {
 
       &.is-pulled-up {
-        margin-top: -3.5rem;
+        margin-top: -4rem;
       }
 
       .tabs {
